--- a/Dataset_processing/WIP_main.ipynb
+++ b/Dataset_processing/WIP_main.ipynb
@@ -232,7 +232,7 @@
     "\n",
     "# Cada array com [n_epochs, n_channels, n_times], \n",
     "# Tempo varia entre evento + 0.1 s e evento + 2.1 s\n",
-    "# 321 pontos\n",
+    "# 321 pontos de tempo\n",
     "\n",
     "subj_epochs = [all_epochs['rest'].get_data(), all_epochs['left'].get_data(), all_epochs['right'].get_data(), all_epochs['hands'].get_data(), all_epochs['feet'].get_data()]\n",
     "\n",
@@ -242,50 +242,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Used Annotations descriptions: ['T0', 'T1', 'T2']\n",
-      "(array([[    0,     0,     1],\n",
-      "       [  672,     0,     3],\n",
-      "       [ 1328,     0,     1],\n",
-      "       [ 2000,     0,     2],\n",
-      "       [ 2656,     0,     1],\n",
-      "       [ 3328,     0,     3],\n",
-      "       [ 3984,     0,     1],\n",
-      "       [ 4656,     0,     2],\n",
-      "       [ 5312,     0,     1],\n",
-      "       [ 5984,     0,     2],\n",
-      "       [ 6640,     0,     1],\n",
-      "       [ 7312,     0,     3],\n",
-      "       [ 7968,     0,     1],\n",
-      "       [ 8640,     0,     2],\n",
-      "       [ 9296,     0,     1],\n",
-      "       [ 9968,     0,     3],\n",
-      "       [10624,     0,     1],\n",
-      "       [11296,     0,     2],\n",
-      "       [11952,     0,     1],\n",
-      "       [12624,     0,     3],\n",
-      "       [13280,     0,     1],\n",
-      "       [13952,     0,     3],\n",
-      "       [14608,     0,     1],\n",
-      "       [15280,     0,     2],\n",
-      "       [15936,     0,     1],\n",
-      "       [16608,     0,     3],\n",
-      "       [17264,     0,     1],\n",
-      "       [17936,     0,     2],\n",
-      "       [18592,     0,     1],\n",
-      "       [19264,     0,     3]]), {'T0': 1, 'T1': 2, 'T2': 3})\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mne.events_from_annotations(raw))"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
