segmentation data store

--- a/Process_Collected/segmentation.ipynb
+++ b/Process_Collected/segmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,12 +292,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "output = np.array([left_hand_ranges, right_hand_ranges, hand_ranges, feet_ranges])\n",
-    "np.save(\"segments\", output)"
+    "np.save(\"segments\", output)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 150)\n",
+      "(16, 490)\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_data = np.array([np.zeros(150, dtype=np.ndarray)] * 4)\n",
+    "for i in range(len(output_data[0])):\n",
+    "\toutput_data[0, i] = data[:16, left_hand_ranges[i, 0]:left_hand_ranges[i, 1]]\n",
+    "\toutput_data[1, i] = data[:16, right_hand_ranges[i, 0]:right_hand_ranges[i, 1]]\n",
+    "\toutput_data[2, i] = data[:16, hand_ranges[i, 0]:hand_ranges[i, 1]]\n",
+    "\toutput_data[3, i] = data[:16, feet_ranges[i, 0]:feet_ranges[i, 1]]\n",
+    "\n",
+    "\n",
+    "print(output_data.shape)\n",
+    "print(output_data[3, 149].shape)\n",
+    "np.save(\"data_segmented\", output_data)"
    ]
   }
  ],
