add rests to the segmentation

--- a/Process_Collected/segmentation.ipynb
+++ b/Process_Collected/segmentation.ipynb
@@ -509,6 +509,26 @@
     "with open('data_segmented.pkl', 'wb') as f:\n",
     "\tpickle.dump(output, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ranges = {\n",
+    "\t\"left\": left_hand_ranges,\n",
+    "\t\"right\": left_hand_ranges,\n",
+    "\t\"both\": hand_ranges,\n",
+    "\t\"feet\": feet_ranges,\n",
+    "\t\"rest\": rest_ranges\n",
+    "}\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "with open('segments.pkl', 'wb') as f:\n",
+    "\tpickle.dump(ranges, f)"
+   ]
   }
  ],
  "metadata": {
