Preparation for merge

--- a/Process_Collected/process.ipynb
+++ b/Process_Collected/process.ipynb
@@ -490,8 +490,7 @@
     "plt.figure()\n",
     "plt.plot(nyq * w/(np.pi), 20 * np.log10(abs(h)))\n",
     "plt.ylabel(\"Abs\")\n",
-    "plt.xlabel(\"Freq (Hz)\")\n",
-    "\n"
+    "plt.xlabel(\"Freq (Hz)\")"
    ]
   },
   {
