--- a/Process_Collected/complete.ipynb
+++ b/Process_Collected/complete.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "HEADER = ['F3', 'Fz', 'F4', 'FC3', 'FCz', 'FC4', 'C3', 'Cz', 'C4', 'CP3', 'CPz', 'CP4', 'P3', 'Pz', 'P4', 'Oz', 'Photoresistor']\n",
-    "tsv = pd.read_csv(\"../data/S1_21_tomas_3.csv\", sep=\"\\t\", names=HEADER)"
+    "tsv = pd.read_csv(\"../data/EEG Data.csv\", sep=\"\\t\", names=HEADER)"
    ]
   },
   {
